objects/Steelbrick_Pricing_Blocks__c.object
<CustomObject>
    <fields>
        <fullName>AnnualPrice__c</fullName>
        <label>AnnualPrice</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <description>Contains a unique value used for data loads</description>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>25</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>FacilityNumberHigh__c</fullName>
        <label>FacilityNumberHigh</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FacilityNumberLow__c</fullName>
        <label>FacilityNumberLow</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HighNumber__c</fullName>
        <label>HighNumber</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LowNumber__c</fullName>
        <inlineHelpText>lowest value for this record</inlineHelpText>
        <label>LowNumber</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OpExORAnnualRevHigh__c</fullName>
        <label>OpExORAnnualRevHigh</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>OpExORAnnualRevLow__c</fullName>
        <label>OpExORAnnualRevLow</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ProductName__c</fullName>
        <label>Product Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Research_Expenditure_High__c</fullName>
        <label>Research Expenditure High</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Research_Expenditure_Low__c</fullName>
        <label>Research Expenditure Low</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Steelbrick Pricing Blocks</label>
    <listViews>
        <fullName>All</fullName>
        <columns>ProductName__c</columns>
        <columns>AnnualPrice__c</columns>
        <columns>OpExORAnnualRevLow__c</columns>
        <columns>OpExORAnnualRevHigh__c</columns>
        <columns>LowNumber__c</columns>
        <columns>HighNumber__c</columns>
        <columns>FacilityNumberLow__c</columns>
        <columns>FacilityNumberHigh__c</columns>
        <columns>Research_Expenditure_Low__c</columns>
        <columns>Research_Expenditure_High__c</columns>
        <columns>NAME</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>edaf</fullName>
        <columns>NAME</columns>
        <columns>OpExORAnnualRevLow__c</columns>
        <columns>OpExORAnnualRevHigh__c</columns>
        <columns>LowNumber__c</columns>
        <columns>HighNumber__c</columns>
        <columns>AnnualPrice__c</columns>
        <columns>ProductName__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ProductName__c</field>
            <operation>startsWith</operation>
            <value>EDAF -</value>
        </filters>
        <label>edaf</label>
    </listViews>
    <listViews>
        <fullName>edcp</fullName>
        <columns>NAME</columns>
        <columns>OpExORAnnualRevLow__c</columns>
        <columns>OpExORAnnualRevHigh__c</columns>
        <columns>LowNumber__c</columns>
        <columns>HighNumber__c</columns>
        <columns>AnnualPrice__c</columns>
        <columns>ProductName__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ProductName__c</field>
            <operation>contains</operation>
            <value>EDCP</value>
        </filters>
        <label>edcp</label>
    </listViews>
    <listViews>
        <fullName>edcps</fullName>
        <columns>NAME</columns>
        <columns>OpExORAnnualRevLow__c</columns>
        <columns>OpExORAnnualRevHigh__c</columns>
        <columns>LowNumber__c</columns>
        <columns>HighNumber__c</columns>
        <columns>AnnualPrice__c</columns>
        <columns>ProductName__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ProductName__c</field>
            <operation>contains</operation>
            <value>EDCPS</value>
        </filters>
        <label>edcps</label>
    </listViews>
    <listViews>
        <fullName>edem</fullName>
        <columns>NAME</columns>
        <columns>OpExORAnnualRevLow__c</columns>
        <columns>OpExORAnnualRevHigh__c</columns>
        <columns>LowNumber__c</columns>
        <columns>HighNumber__c</columns>
        <columns>AnnualPrice__c</columns>
        <columns>ProductName__c</columns>
        <columns>FacilityNumberHigh__c</columns>
        <columns>FacilityNumberLow__c</columns>
        <columns>Research_Expenditure_High__c</columns>
        <columns>Research_Expenditure_Low__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ProductName__c</field>
            <operation>startsWith</operation>
            <value>edem</value>
        </filters>
        <label>edem</label>
    </listViews>
    <listViews>
        <fullName>edpv</fullName>
        <columns>NAME</columns>
        <columns>OpExORAnnualRevLow__c</columns>
        <columns>OpExORAnnualRevHigh__c</columns>
        <columns>LowNumber__c</columns>
        <columns>HighNumber__c</columns>
        <columns>AnnualPrice__c</columns>
        <columns>ProductName__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ProductName__c</field>
            <operation>startsWith</operation>
            <value>EDPVA</value>
        </filters>
        <label>edpv</label>
    </listViews>
    <listViews>
        <fullName>edsa</fullName>
        <columns>NAME</columns>
        <columns>OpExORAnnualRevLow__c</columns>
        <columns>OpExORAnnualRevHigh__c</columns>
        <columns>LowNumber__c</columns>
        <columns>HighNumber__c</columns>
        <columns>AnnualPrice__c</columns>
        <columns>ProductName__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ProductName__c</field>
            <operation>startsWith</operation>
            <value>EDSA -</value>
        </filters>
        <label>edsa</label>
    </listViews>
    <nameField>
        <displayFormat>SPB-{0000000}</displayFormat>
        <label>Steelbrick Pricing Blocks Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Steelbrick Pricing Blocks</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>